--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>lucasdev.codeberg.page</title>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Mynerve&display=swap');
+            body {
+                font-family: 'Mynerve', cursive;
+            }
+        </style>
     </head>
 
     <body>
